--- a/docs/include/psyteachr.css
+++ b/docs/include/psyteachr.css
@@ -107,26 +107,26 @@ div.color-theme-2 .book-body .page-wrapper .page-inner section.normal strong cod
   background-position: 0.5em -.25em;
 }
 
-
-/* webex style */
-
-/* styles for solveme */
-.solveme { border: 2px dotted var(--pink); }
-.solveme.correct { border: 2px solid var(--green); }
+/* styles for webex-solveme */
+.webex-solveme { border: 2px dotted red; }
+.webex-solveme.webex-correct { border: 2px solid blue; }
 /* styles for hidden solutions */
-.solution {
-    height: 2.2em;
+.webex-solution {
+    height: 2.5em;
     overflow-y: hidden;
     padding: 0.5em;
 }
-.solution.open {
+.webex-solution.open {
     height: auto;
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
-.solution button {
-    height: 1.5em;
+.webex-solution button {
+    height: 2em;
     margin-bottom: 0.5em;
+}
+.webex-solution pre.sourceCode {
+    border-color: green;
 }
 
 /* verbatim code chunks with ```{r ...} at top */
